--- a/src/components/ShareImage.css
+++ b/src/components/ShareImage.css
@@ -186,6 +186,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: -12px;
 }
 
 /* Connector (dekorativ) */
@@ -248,6 +249,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: -12px;
 }
 
 /* Sieger */
